<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>GeneratorBohatera</groupId>
  <artifactId>GeneratorBohatera</artifactId>
	<packaging>pom</packaging>
	<version>0.0.1-SNAPSHOT</version>
	<modules>
		<module>Generator</module>
	</modules>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
		<java.version>11</java.version>
		<slf4j.version>1.7.30</slf4j.version>
		<JUinit.version>5.7.1</JUinit.version>
		<maven.compiler.source>${java.version}</maven.compiler.source>
		<maven.compiler.target>${java.version}</maven.compiler.target>
	</properties>
  <dependencies>
  	<dependency>
  		<groupId>com.itextpdf</groupId>
  		<artifactId>kernel</artifactId>
  		<version>7.1.11</version>
  	</dependency>
  	<dependency>
  		<groupId>com.itextpdf</groupId>
  		<artifactId>layout</artifactId>
  		<version>7.1.11</version>
  	</dependency>
  	<dependency>
  		<groupId>com.itextpdf</groupId>
  		<artifactId>io</artifactId>
  		<version>7.1.11</version>
  	</dependency>
  	<dependency>
  		<groupId>com.itextpdf</groupId>
  		<artifactId>forms</artifactId>
  		<version>7.1.11</version>
  	</dependency>
  	<dependency>
    <groupId>org.apache.poi</groupId>
    <artifactId>poi</artifactId>
    <version>4.1.2</version>
</dependency>
<dependency>
    <groupId>org.apache.poi</groupId>
    <artifactId>poi-ooxml</artifactId>
    <version>3.9</version>
</dependency>
 <dependency>
	  <groupId>org.slf4j</groupId>
	  <artifactId>slf4j-api</artifactId>
	  <version>${slf4j.version}</version>
 </dependency>
 <dependency>
	  <groupId>org.slf4j</groupId>
	  <artifactId>slf4j-simple</artifactId>
	  <version>${slf4j.version}</version>
 </dependency>
	  <dependency>
		  <groupId>org.projectlombok</groupId>
		  <artifactId>lombok</artifactId>
		  <version>1.18.16</version>
		  <scope>provided</scope>
	  </dependency>
	  <dependency>
		  <groupId>org.junit.jupiter</groupId>
		  <artifactId>junit-jupiter-api</artifactId>
		  <version>${JUinit.version}</version>
		  <scope>test</scope>
	  </dependency>
	  <dependency>
		  <groupId>org.junit.jupiter</groupId>
		  <artifactId>junit-jupiter-engine</artifactId>
		  <version>${JUinit.version}</version>
		  <scope>test</scope>
	  </dependency>
	  <!-- https://mvnrepository.com/artifact/org.mockito/mockito-all -->
	  <dependency>
		  <groupId>org.mockito</groupId>
		  <artifactId>mockito-all</artifactId>
		  <version>2.0.2-beta</version>
		  <scope>test</scope>
	  </dependency>


  </dependencies>
	<build>
		<plugins>
			<plugin>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>2.22.1</version>
				<configuration>
					<argLine>
						--illegal-access=permit
					</argLine>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-failsafe-plugin</artifactId>
				<version>3.0.0-M5</version>
				<configuration>
					<argLine>
						--illegal-access=permit
					</argLine>
				</configuration>
				<executions>
					<execution>
						<goals>
							<goal>integration-test</goal>
							<goal>verify</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
		</plugins>
	</build>
</project>